--- a/test/TestConfig.php.dist
+++ b/test/TestConfig.php.dist
@@ -1,6 +1,8 @@
 <?php
 return array(
     'modules' => array(
+        'DoctrineModule',
+        'DoctrineORMModule',
         'TeShopify',
     ),
     'module_listener_options' => array(
